--- a/index.html
+++ b/index.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
-<html lang="en"> 
-	<head>
-		<title> Super Mario Bros</title> 
-	</head> 
-	<body> 
-		<! -- The header includes the company name, 
-		site navigation and banner image. --> 
-		<header>
-		<nav>  
-		</nav> 
-	</header>
-	<! - - The main section includes two smaller sections. --> 
-	<main> 
-	<!- - About - ->
-	<section> 
-	</section> 
-	<! - - History - -> 
-	<section> 
-	<! - - Characters - -> 
-	</section> 
-</main> 
+<html lang="en">
+<head> 
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://use.typekit.net/zvy3ssl.css">
+    <link href="css/mario.css" rel="stylesheet" type="text/css"> 
+    <title>Document</title>
+</head>
+<body>
+    <!--The header includes the title and site navigation-->
+    <header> 
+        <h1> Super Mario Bros</h1>
+    </header>
+        <nav> 
+            <ul>
+                <li> <a href= "aboutme.html">About Me</a></li>
+                <li> <a href= "Characters">Characters</a> </li>
+                <li> <a href= "History">History</a> </li>
+
+            </ul>
+        </nav>
+</body> 
+</html>
